# tapado

./: Cargo.toml  Estrutura.md  LICENSE  README.md
src/: agent.rs  grid.rs  main.rs  qlearning.rs  ui.rs
