[package]
name = "tapado"
version = "0.1.0"
authors = ["Karan"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8"

# Otimizações para builds de desenvolvimento (reduz lag)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
